--- a/package.json
+++ b/package.json
@@ -10,9 +10,22 @@
     "type": "git",
     "url": "git+https://github.com/x-495/EvalX.git"
   },
+   "dependencies": {
+    "dark-sky": "^1.1.2",
+    "discord.js": "^11.2.1",
+    "dotenv": "^4.0.0",
+    "google-images": "^2.1.0",
+    "mathjs": "^3.16.5",
+    "moment": "^2.19.1",
+    "moment-duration-format": "^1.3.0",
+    "moment-timezone": "^0.5.14",
+    "node-geocoder": "^3.21.0",
+    "node-pre-gyp": "^0.6.39",
+    "pm2": "^2.7.2"
+  },
   "keywords": [
-    "eval",
-    "discord"
+    "xd",
+    "lol"
   ],
   "dependencies": {
     "discord.js":"^11.3.0",
