--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
    "dependencies": {
     "dark-sky": "^1.1.2",
+    "relevant-urban": "^3.0.0",
     "discord.js": "^11.2.1",
     "dotenv": "^4.0.0",
     "google-images": "^2.1.0",
