--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "moment-timezone": "^0.5.14",
     "node-geocoder": "^3.21.0",
     "node-pre-gyp": "^0.6.39",
-    "pm2": "^2.7.2"
+    "pm2": "^2.7.2",
+    "ytdl-core": "^0.20.1"
   },
   "keywords": [
     "xd",
