--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dark-sky": "^1.1.2",
     "relevant-urban": "^3.0.0",
     "discord.js": "^11.2.1",
+    "jimp": "^0.2.28",
     "dotenv": "^4.0.0",
     "google-images": "^2.1.0",
     "mathjs": "^3.16.5",
