--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "dark-sky": "^1.1.2",
     "relevant-urban": "^3.0.0",
     "discord.js": "^11.2.1",
-    "jimp": "^0.2.28",
     "dotenv": "^4.0.0",
     "google-images": "^2.1.0",
     "mathjs": "^3.16.5",
@@ -24,7 +23,23 @@
     "node-geocoder": "^3.21.0",
     "node-pre-gyp": "^0.6.39",
     "pm2": "^2.7.2",
-    "ytdl-core": "^0.20.1"
+    "ytdl-core": "^0.20.1",
+    "bignumber.js": "^2.1.0",
+    "bmp-js": "0.0.3",
+    "buffer": "^5.0.2",
+    "es6-promise": "^3.0.2",
+    "exif-parser": "^0.1.9",
+    "file-type": "^3.1.0",
+    "jpeg-js": "^0.2.0",
+    "load-bmfont": "^1.2.3",
+    "mime": "^1.3.4",
+    "mkdirp": "0.5.1",
+    "pixelmatch": "^4.0.0",
+    "pngjs": "^3.0.0",
+    "raw-body": "^2.3.2",
+    "phin": "^2.9.0",
+    "tinycolor2": "^1.1.2",
+    "utif": "^1.1.2"
   },
   "keywords": [
     "xd",
