--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
    "dependencies": {
     "dark-sky": "^1.1.2",
     "relevant-urban": "^3.0.0",
-    "discord.js": "^11.2.1",
+    "discord.js": "11.3.2",
     "dotenv": "^4.0.0",
     "google-images": "^2.1.0",
     "mathjs": "^3.16.5",
