--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "phin": "^2.9.0",
     "tinycolor2": "^1.1.2",
     "utif": "^1.1.2",
-    "ytdl-core": "^0.16.0"
   },
   "keywords": [
     "xd",
@@ -50,7 +49,10 @@
     "discord.js":"^11.3.0",
     "superagent":"^3.8.2",
     "request": "2.81.0",
-    "cheerio": "1.0.0-rc.2"
+    "cheerio": "1.0.0-rc.2",
+    "ytdl-core": "^0.16.0",
+    "buffer": "^5.0.2",
+    "google-images": "^2.1.0"
   },
   "author": "X-49",
   "license": "MIT",
