--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "request": "2.81.0",
     "cheerio": "1.0.0-rc.2",
     "ytdl-core": "^0.16.0",
+    "jimp": "^0.2.28",
     "buffer": "^5.0.2",
     "google-images": "^2.1.0"
   },
