--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ytdl-core": "^0.16.0",
     "jimp": "^0.2.28",
     "buffer": "^5.0.2",
+    "relevant-urban": "^2.0.0",
     "google-images": "^2.1.0"
   },
   "author": "X-49",
