--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cheerio": "1.0.0-rc.2",
     "ytdl-core": "^0.16.0",
     "jimp": "^0.2.28",
+    "moment": "^2.19.1",
     "buffer": "^5.0.2",
     "relevant-urban": "^2.0.0",
     "google-images": "^2.1.0",
