--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "ytdl-core": "^0.16.0",
     "jimp": "^0.2.28",
     "moment": "^2.19.1",
-    "convas": "2.0.0",
+    "canvas": "2.0.0",
     "buffer": "^5.0.2",
     "relevant-urban": "^2.0.0",
     "google-images": "^2.1.0",
