--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jimp": "^0.2.28",
     "moment": "^2.19.1",
     "canvas": "1.6.11",
+    "google-translate-api": "2.3.0",
     "buffer": "^5.0.2",
     "relevant-urban": "^2.0.0",
     "google-images": "^2.1.0",
