--- a/package.json
+++ b/package.json
@@ -23,12 +23,17 @@
     "jimp": "^0.2.28",
     "moment": "^2.19.1",
     "canvas": "1.6.11",
-    "google-translate-api": "2.3.0",
     "buffer": "^5.0.2",
     "relevant-urban": "^2.0.0",
     "google-images": "^2.1.0",
     "opusscript": "0.0.6"
   },
+  "optionalDependencies": {
+        "canvas": "^2.0.0-alpha.12",
+        "canvas-constructor": "^1.0.1",
+        "fs-nextra": "^0.3.5",
+        "google-translate-api": "^2.3.0"
+    },
   "author": "X-49",
   "license": "MIT",
   "bugs": {
