--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
         "canvas": "^2.0.0-alpha.12",
         "canvas-constructor": "^1.0.1",
         "fs-nextra": "^0.3.5",
-        "google-translate-api": "^2.3.0"
+        "google-translate-api": "^2.3.0",
+        "jimp": "0.2.28"
     },
   "author": "X-49",
   "license": "MIT",
