--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "buffer": "^5.0.2",
     "relevant-urban": "^2.0.0",
     "google-images": "^2.1.0",
+    "eris": "^0.8.5",
     "opusscript": "0.0.6"
   },
   "optionalDependencies": {
