--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "buffer": "^5.0.2",
     "relevant-urban": "^2.0.0",
     "google-images": "^2.1.0",
-    "eris": "^0.8.5",
     "opusscript": "0.0.6"
   },
   "optionalDependencies": {
@@ -34,7 +33,9 @@
         "canvas-constructor": "^1.0.1",
         "fs-nextra": "^0.3.5",
         "google-translate-api": "^2.3.0",
-        "jimp": "0.2.28"
+        "jimp": "0.2.28",
+        "eris": "^0.8.5",
+        "eris-sharder": "^1.7.9"
     },
   "author": "X-49",
   "license": "MIT",
