--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "canvas-constructor": "^1.0.1",
         "fs-nextra": "^0.3.5",
         "google-translate-api": "^2.3.0",
+        "git-last-commit": "^0.3.0",
         "jimp": "0.2.28",
         "eris": "^0.8.5",
         "eris-sharder": "^1.7.9"
