--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "opusscript": "0.0.6"
   },
   "optionalDependencies": {
+        "weather-js": "^2.0.0",
         "canvas": "^2.0.0-alpha.12",
         "canvas-constructor": "^1.0.1",
+        "canvas-progress-bar": "^1.0.3",
         "fs-nextra": "^0.3.5",
         "google-translate-api": "^2.3.0",
         "git-last-commit": "^0.3.0",
