--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
         "jimp": "0.2.28",
         "eris": "^0.8.5",
         "eris-sharder": "^1.7.9",
-        "youtube-dl": "^1.12.2"
+        "youtube-dl": "^1.12.2",
+        "hastebin-gen": "^1.3.1"
     },
   "author": "X-49",
   "license": "MIT",
