--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "canvas-constructor": "^1.0.1",
         "canvas-progress-bar": "^1.0.3",
         "fs-nextra": "^0.3.5",
+        "quick.db": "^6.3.2",
         "google-translate-api": "^2.3.0",
         "git-last-commit": "^0.3.0",
         "jimp": "0.2.28",
