--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
         "eris": "^0.8.5",
         "eris-sharder": "^1.7.9",
         "youtube-dl": "^1.12.2",
-        "hastebin-gen": "^1.3.1"
+        "hastebin-gen": "^1.3.1",
+        "pixl-request": "^1.0.21"
     },
   "author": "X-49",
   "license": "MIT",
