--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "canvas": "^2.0.0-alpha.12",
         "canvas-constructor": "^1.0.1",
         "canvas-progress-bar": "^1.0.3",
+        "string-similarity": "^1.2.0",
         "fs-nextra": "^0.3.5",
         "quick.db": "^6.3.2",
         "google-translate-api": "^2.3.0",
