--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "opusscript": "0.0.6"
   },
   "optionalDependencies": {
+        "array-sort": "^1.0.0",
         "weather-js": "^2.0.0",
         "canvas": "^2.0.0-alpha.12",
         "canvas-constructor": "^1.0.1",
@@ -36,6 +37,7 @@
         "string-similarity": "^1.2.0",
         "fs-nextra": "^0.3.5",
         "quick.db": "^6.3.2",
+        "table": "^4.0.3",
         "google-translate-api": "^2.3.0",
         "git-last-commit": "^0.3.0",
         "jimp": "0.2.28",
