--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "discord.js":"^11.3.0",
+    "dbl-api": "^1.2.1",
     "superagent":"^3.8.2",
     "request": "2.81.0",
     "cheerio": "1.0.0-rc.2",
