--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   ],
   "dependencies": {
     "discord.js":"^11.3.0",
-    "dbl-api": "^1.2.1",
+    "dblapi.js": "^2.2.0",
     "superagent":"^3.8.2",
     "request": "2.81.0",
     "cheerio": "1.0.0-rc.2",
