--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "discord.js":"^11.3.0",
     "dblapi.js": "^2.2.0",
     "superagent":"^3.8.2",
-    "request": "2.81.0",
-    "cheerio": "1.0.0-rc.2",
+    "request": "^2.81.0",
+    "cheerio": "^1.0.0-rc.2",
     "ytdl-core": "^0.16.0",
     "jimp": "^0.2.28",
     "moment": "^2.19.1",
@@ -27,7 +27,8 @@
     "buffer": "^5.0.2",
     "relevant-urban": "^2.0.0",
     "google-images": "^2.1.0",
-    "opusscript": "0.0.6"
+    "ffmpeg": "0.0.4",
+    "opusscript": "^0.0.6"
   },
   "optionalDependencies": {
         "array-sort": "^1.0.0",
@@ -41,7 +42,7 @@
         "table": "^4.0.3",
         "google-translate-api": "^2.3.0",
         "git-last-commit": "^0.3.0",
-        "jimp": "0.2.28",
+        "jimp": "^0.2.28",
         "eris": "^0.8.5",
         "eris-sharder": "^1.7.9",
         "youtube-dl": "^1.12.2",
