--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   ],
   "dependencies": {
     "discord.js":"^11.3.0",
-    "discord.js-music-v11",
+    "discord.js-music-v11": "^1.3.4",
     "dblapi.js": "^2.2.0",
     "superagent":"^3.8.2",
     "request": "^2.81.0",
