--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "fs-nextra": "^0.3.5",
         "quick.db": "^6.3.2",
         "table": "^4.0.3",
+        "qrcode": "^1.2.0",
         "google-translate-api": "^2.3.0",
         "git-last-commit": "^0.3.0",
         "jimp": "^0.2.28",
