--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "relevant-urban": "^2.0.0",
     "google-images": "^2.1.0",
     "ffmpeg": "0.0.4",
-    "node-opus": "^0.3.0"
+    "node-opus": "^0.3.0",
+    "opusscript": "^0.0.6"
   },
   "optionalDependencies": {
         "array-sort": "^1.0.0",
