--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "optionalDependencies": {
         "array-sort": "^1.0.0",
+        "dblposter": "^1.3.1",
         "weather-js": "^2.0.0",
         "canvas": "^2.0.0-alpha.12",
         "canvas-constructor": "^1.0.1",
