--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "optionalDependencies": {
         "array-sort": "^1.0.0",
         "dblposter": "^1.3.1",
+        "discord.js-sharder": "1.0.6",
         "weather-js": "^2.0.0",
         "canvas": "^2.0.0-alpha.12",
         "canvas-constructor": "^1.0.1",
