--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
         "youtube-dl": "^1.12.2",
         "hastebin-gen": "^1.3.1",
         "pixl-request": "^1.0.21",
-        "weeb.js": "^1.6.2"
+        "weeb.js": "^1.6.2",
+        "Wolken": "^0.2.1"
     },
   "author": "X-49",
   "license": "MIT",
