--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
         "dblposter": "^1.3.1",
         "discord.js-sharder": "1.0.6",
         "weather-js": "^2.0.0",
+        "weeb.js": "^1.6.2",
+        "wolken": "^0.2.1",
+        "weeb-wrapper": "^1.3.2",
         "canvas": "^2.0.0-alpha.12",
         "canvas-constructor": "^1.0.1",
         "canvas-progress-bar": "^1.0.3",
@@ -55,9 +58,7 @@
         "eris-sharder": "^1.7.9",
         "youtube-dl": "^1.12.2",
         "hastebin-gen": "^1.3.1",
-        "pixl-request": "^1.0.21",
-        "weeb.js": "^1.6.2",
-        "wolken": "^0.2.1"
+        "pixl-request": "^1.0.21"
     },
   "author": "X-49",
   "license": "MIT",
