--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
         "eris-sharder": "^1.7.9",
         "youtube-dl": "^1.12.2",
         "hastebin-gen": "^1.3.1",
-        "pixl-request": "^1.0.21"
+        "pixl-request": "^1.0.21",
+        "pornsearch": "2.4.2"
     },
   "author": "X-49",
   "license": "MIT",
